--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,15 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!-- Vendor CSS Files -->
+  <link href="%PUBLIC_URL%/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link href="%PUBLIC_URL%/vendor/animate.css/animate.min.css" rel="stylesheet">
+  <link href="%PUBLIC_URL%/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="%PUBLIC_URL%/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="%PUBLIC_URL%/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="%PUBLIC_URL%/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="%PUBLIC_URL%/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="%PUBLIC_URL%/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -43,6 +52,14 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+  <!-- Vendor JS Files -->
+  <script src="%PUBLIC_URL%/vendor/purecounter/purecounter.js"></script>
+  <script src="%PUBLIC_URL%/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="%PUBLIC_URL%/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="%PUBLIC_URL%/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="%PUBLIC_URL%/vendor/php-email-form/validate.js"></script>
+
 </body>
 
 </html>
