--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,9 @@
   <script src="%PUBLIC_URL%/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="%PUBLIC_URL%/vendor/php-email-form/validate.js"></script>
 
+  <!-- Template Main JS File -->
+  <script src="%PUBLIC_URL%/vendor/main.js"></script>
+
 </body>
 
 </html>
