--- a/public/index.html
+++ b/public/index.html
@@ -54,11 +54,11 @@
     -->
 
   <!-- Vendor JS Files -->
-  <script src="%PUBLIC_URL%/vendor/purecounter/purecounter.js"></script>
   <script src="%PUBLIC_URL%/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="%PUBLIC_URL%/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="%PUBLIC_URL%/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="%PUBLIC_URL%/vendor/php-email-form/validate.js"></script>
+  <!-- <script src="%PUBLIC_URL%/vendor/purecounter/purecounter.js"></script> -->
+  <!-- <script src="%PUBLIC_URL%/vendor/php-email-form/validate.js"></script> -->
 </body>
 
 </html>
